syntax = "proto3";

package hipstershop;

option go_package = "./proto;hipstershop";

message CartItem{
  string product_id = 1;
  int32 quantity = 2;
}

message Money {
  string currency_code=1;
  int64 units =2;
  int32 nanos =3;
}
service ShippingService {
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse){}
  rpc ShipOrder(ShipOrderRequest) returns (ShipOrderResponse){};
}
message GetQuoteRequest {
  Address address = 1;
  repeated CartItem items = 2;
}

message GetQuoteResponse { Money cost_usd = 1; }

message ShipOrderRequest {
  Address address = 1;
  repeated CartItem items = 2;
}

message ShipOrderResponse { string tracking_id = 1; }

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}